make texts in side-bar auto collapse into ellipsis to avoid overflowing

--- a/style.css
+++ b/style.css
@@ -191,6 +191,11 @@ h3 {
   transform:scale(1.2);
 }
 
+p.list-thing{
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .list-thing::before {
   content: "";
   position: absolute;
@@ -216,7 +221,6 @@ h3 {
 .java::before {
   background: url("icon/java.png") center no-repeat;
 }
-
 
 .title {
   width: 80%;
